{
  "version": 4,
  "terraform_version": "1.0.7",
  "serial": 42,
  "lineage": "def68ed4-8eec-f070-1221-374d464d44c8",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "prod-eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0ee7faf8648a9907e",
            "domain": "vpc",
            "id": "eipalloc-0ee7faf8648a9907e",
            "network_border_group": "eu-west-1",
            "public_dns": "ec2-34-250-222-168.eu-west-1.compute.amazonaws.com",
            "public_ip": "34.250.222.168",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "prod-eip"
            },
            "tags_all": {
              "Name": "prod-eip"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "prod-igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:173619601011:internet-gateway/igw-0ff1a9623f4f901b2",
            "id": "igw-0ff1a9623f4f901b2",
            "owner_id": "173619601011",
            "tags": {
              "Name": "prod-igw"
            },
            "tags_all": {
              "Name": "prod-igw"
            },
            "vpc_id": "vpc-02ab347c6aafd916d"
          },
          "dependencies": [
            "aws_vpc.rock-project"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "prod-nat-gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0ee7faf8648a9907e",
            "connectivity_type": "public",
            "id": "nat-0d13a9f91279810c5",
            "network_interface_id": "eni-02657fc95e1f48ff9",
            "private_ip": "10.0.0.57",
            "public_ip": "34.250.222.168",
            "subnet_id": "subnet-01f9833fe6ca8b890",
            "tags": {
              "Name": "prod-nat-gateway"
            },
            "tags_all": {
              "Name": "prod-nat-gateway"
            }
          },
          "dependencies": [
            "aws_eip.prod-eip",
            "aws_internet_gateway.prod-igw",
            "aws_subnet.prod-pub-sub1",
            "aws_vpc.rock-project"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "eip-assocation",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0554a1a7ed62815b81080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-0d13a9f91279810c5",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0554a1a7ed62815b8",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.prod-eip",
            "aws_internet_gateway.prod-igw",
            "aws_nat_gateway.prod-nat-gateway",
            "aws_route_table.prod-priv-route-table",
            "aws_subnet.prod-pub-sub1",
            "aws_vpc.rock-project"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "rock-project",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-0ff1a9623f4f901b2",
            "id": "r-rtb-098eaa8271f27cee21080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-098eaa8271f27cee2",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_route_table.prod-pub-route-table",
            "aws_vpc.rock-project",
            "aws_internet_gateway.prod-igw"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "prod-priv-route-table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:173619601011:route-table/rtb-0554a1a7ed62815b8",
            "id": "rtb-0554a1a7ed62815b8",
            "owner_id": "173619601011",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "prod-priv-route"
            },
            "tags_all": {
              "Name": "prod-priv-route"
            },
            "timeouts": null,
            "vpc_id": "vpc-02ab347c6aafd916d"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.rock-project"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "prod-pub-route-table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:173619601011:route-table/rtb-098eaa8271f27cee2",
            "id": "rtb-098eaa8271f27cee2",
            "owner_id": "173619601011",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0ff1a9623f4f901b2",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "prod-pub-route-table"
            },
            "tags_all": {
              "Name": "prod-pub-route-table"
            },
            "timeouts": null,
            "vpc_id": "vpc-02ab347c6aafd916d"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.rock-project"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private-association1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0ea86bd37dd0c6a78",
            "route_table_id": "rtb-0554a1a7ed62815b8",
            "subnet_id": "subnet-0073f1d679b7e800a"
          },
          "dependencies": [
            "aws_route_table.prod-priv-route-table",
            "aws_subnet.prod-priv-sub1",
            "aws_vpc.rock-project"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private-association2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0f29b010726464598",
            "route_table_id": "rtb-0554a1a7ed62815b8",
            "subnet_id": "subnet-07f9a61692b4a2e7f"
          },
          "dependencies": [
            "aws_route_table.prod-priv-route-table",
            "aws_subnet.prod-priv-sub2",
            "aws_vpc.rock-project"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public-association1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-004583245d46e8dd4",
            "route_table_id": "rtb-098eaa8271f27cee2",
            "subnet_id": "subnet-01f9833fe6ca8b890"
          },
          "dependencies": [
            "aws_route_table.prod-pub-route-table",
            "aws_subnet.prod-pub-sub1",
            "aws_vpc.rock-project"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public-association2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0c0f17e2c96b8cecb",
            "route_table_id": "rtb-098eaa8271f27cee2",
            "subnet_id": "subnet-0012a9014f1b64101"
          },
          "dependencies": [
            "aws_route_table.prod-pub-route-table",
            "aws_subnet.prod-pub-sub2",
            "aws_vpc.rock-project"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public-association3",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-012c0a166fcba7568",
            "route_table_id": "rtb-098eaa8271f27cee2",
            "subnet_id": "subnet-0b170e293c8fb092f"
          },
          "dependencies": [
            "aws_route_table.prod-pub-route-table",
            "aws_subnet.prod-pub-sub3",
            "aws_vpc.rock-project"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "prod-priv-sub1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:173619601011:subnet/subnet-0073f1d679b7e800a",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1a",
            "availability_zone_id": "euw1-az3",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0073f1d679b7e800a",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "173619601011",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "prod-priv-sub1"
            },
            "tags_all": {
              "Name": "prod-priv-sub1"
            },
            "vpc_id": "vpc-02ab347c6aafd916d"
          },
          "dependencies": [
            "aws_vpc.rock-project"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "prod-priv-sub2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:173619601011:subnet/subnet-07f9a61692b4a2e7f",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1b",
            "availability_zone_id": "euw1-az1",
            "cidr_block": "10.0.4.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-07f9a61692b4a2e7f",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "173619601011",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "prod-priv-sub2"
            },
            "tags_all": {
              "Name": "prod-priv-sub2"
            },
            "vpc_id": "vpc-02ab347c6aafd916d"
          },
          "dependencies": [
            "aws_vpc.rock-project"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "prod-pub-sub1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:173619601011:subnet/subnet-01f9833fe6ca8b890",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1a",
            "availability_zone_id": "euw1-az3",
            "cidr_block": "10.0.0.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-01f9833fe6ca8b890",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "173619601011",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "prod-public-sub1"
            },
            "tags_all": {
              "Name": "prod-public-sub1"
            },
            "vpc_id": "vpc-02ab347c6aafd916d"
          },
          "dependencies": [
            "aws_vpc.rock-project"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "prod-pub-sub2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:173619601011:subnet/subnet-0012a9014f1b64101",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1b",
            "availability_zone_id": "euw1-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0012a9014f1b64101",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "173619601011",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "prod-public-sub2"
            },
            "tags_all": {
              "Name": "prod-public-sub2"
            },
            "vpc_id": "vpc-02ab347c6aafd916d"
          },
          "dependencies": [
            "aws_vpc.rock-project"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "prod-pub-sub3",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:173619601011:subnet/subnet-0b170e293c8fb092f",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1c",
            "availability_zone_id": "euw1-az2",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0b170e293c8fb092f",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "173619601011",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "prod-public-sub3"
            },
            "tags_all": {
              "Name": "prod-public-sub3"
            },
            "vpc_id": "vpc-02ab347c6aafd916d"
          },
          "dependencies": [
            "aws_vpc.rock-project"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "rock-project",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:173619601011:vpc/vpc-02ab347c6aafd916d",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0b9c5a91c52fc9eec",
            "default_route_table_id": "rtb-0e451295e36455bc4",
            "default_security_group_id": "sg-07259a3c595beb121",
            "dhcp_options_id": "dopt-04a720c8d185faf3a",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-02ab347c6aafd916d",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0e451295e36455bc4",
            "owner_id": "173619601011",
            "tags": {
              "Name": "rock-project"
            },
            "tags_all": {
              "Name": "rock-project"
            }
          }
        }
      ]
    }
  ]
}